# kreexogl

./: .gitmodules  README.md  build.sh
source/: CMakeLists.txt  KRXApp.cpp  KRXApp.hpp  KRXTypes.cpp  KRXTypes.hpp  KRXWindow.cpp  KRXWindow.hpp  main.cpp
source/assets/shaders/: default.frag  default.vert
source/assets/shaders/default/: default.frag  default.vert
source/assets/shaders/gamma/: gamma.frag  gamma.vert
source/debug/: debug.cpp  debug.hpp
source/lib/STB/: CMakeLists.txt
source/renderer/: KRXIndexBuffer.cpp  KRXIndexBuffer.hpp  KRXModel.cpp  KRXModel.hpp  KRXShader.cpp  KRXShader.hpp  KRXTexture.cpp  KRXTexture.hpp  KRXTexture2D.cpp  KRXTexture2D.hpp  KRXVertexArray.cpp  KRXVertexArray.hpp  KRXVertexBuffer.cpp  KRXVertexBuffer.hpp
source/shaders/: default.frag  default.vert
